feat: dynamically populate event categories and enhance UI styles

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         <h3>Eventos</h3>
         <select id="categoriaFiltro">
           <option value="">Todas as Categorias</option>
-          <option value="Música">Música</option>
-          <option value="Teatro">Teatro</option>
-          <option value="Dança">Dança</option>
-          <!-- Adicione mais categorias conforme necessário -->
+          <!-- As opções serão adicionadas dinamicamente -->
         </select>
         <input type="date" id="dataFiltro" />
         <input type="time" id="horaFiltro" />
