feat: add sharing options and improve event details display

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
     </div>
     <div id="compartilhamento">
+      <p>Compartilhe:</p>
       <button id="compartilharFacebook"><i class="fab fa-facebook-f"></i></button>
       <button id="compartilharTwitter"><i class="fab fa-twitter"></i></button>
       
